2011-12-16 Jesse Kornblum <research@jessekornblum.com>

	* tests/tests.sh: added test for BSD style hashes, iLook hashes

2011-12-04  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* src/display.cpp (dfxml_write): added filesize to DFXML output

2011-11-29  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* src/main.h (d): default I/O mode changed from memory-mapped to buffered (the same as the 3.x release.) Memory-mapped should be faster, but for some reason it isn't. Also it makes the memory usage appear quite large (it isn't, but the top and ps commands report mapped memory.)

2011-11-27 Jesse Kornblum <research@jessekornblum.com>:

	* src/main.cpp (hashdeep_process_command_line): Fixed getopt command so that -c mode takes an argument, but -C does not. The former caused a crash.
	* src/xml.h: Removed spurrious 'const'

2011-11-17  Simson Garfinkel  <simsong@imac3.home>

	* src/main.cpp (state::main): -j default was being set after option processing. Moved to before. -j0 now disables threading, -j1 is just one thread.

2011-11-07 Jesse Kornblum <research@jessekornblum.com>

	* tests/Makefile.am: Corrected test filenames to make dist

2011-11-01 Jesse Kornblum <research@jessekornblum.com>

	* configure.ac: Version bump to 4.0 beta1

2011-10-28  Simson Garfinkel  <simsong@imac3.home>

	* configure.ac (HAVE_PTHREAD): fixed for multithreading error on macos and linux (it wasn't turning on)

2011-10-26  Simson Garfinkel  <simsong@imac3.home>

	* configure.ac: beta counter incremented to beta2

	* tests/tests.sh: added code for test 47 to cover new audit mode generating more output.

	* src/display.cpp (display::audit_update): audit output was going to cerr; should go to cout.

	* src/threadpool.cpp (ERR): changed from fprintf to cerr; added __noreturn__ attribute.

	* src/files.cpp (state::md5deep_load_match_file): file_type no longer shadows member of this.

	* src/xml.cpp (XML::comment): comment no longer shadows local member
